feat: add multi languages for intro

--- a/src/languages/jp.json
+++ b/src/languages/jp.json
@@ -1,3 +1,29 @@
 {
-  "title": "約束は、風のなかに ――"
+  "title": "約束は、風のなかに ――",
+
+  "intro1": "黄金色の海がそよいだ",
+  "intro2": "ゆるりと過ぎゆく時間に包まれながら",
+  "intro3": "懐かしいささめきに包まれながら",
+  "intro4": "約束は、風のなかに ――",
+
+  "original artwork": "原画",
+  "fumuyun": "ふむゆん",
+  "nagayama yuunon": "永山ゆうのん",
+  "kimishima ao": "きみしま青",
+
+  "scenario": "シナリオ",
+  "kai": "魁",
+  "niijima yuu": "新島 夕",
+  "hasama": "ハサマ",
+  "sayuki shun": "佐雪 隼",
+
+  "music producer": "音楽プロデューサー",
+  "orito shinji": "折戸伸治",
+  "director": "ディレクター",
+
+  "producer": "プロデューサー",
+  "okano touya": "丘野塔也",
+
+  "genre": "ジャンル",
+  "romance adventure game": "恋愛アドベンチャーゲーム"
 }
