--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -1,3 +1,29 @@
 {
-  "title": "Lời hẹn ước trong gió"
+  "title": "Lời hẹn ước trong gió",
+
+  "intro1": "Biển vàng nhấp nhô",
+  "intro2": "Thời gian lặng lẽ trôi qua",
+  "intro3": "Những lời thì thầm thân thương",
+  "intro4": "Lời hẹn ước ấy đã tan theo gió...",
+
+  "original artwork": "Minh họa gốc",
+  "fumuyun": "Fumuyun",
+  "nagayama yuunon": "Nagayama Yuunon",
+  "kimishima ao": "Kimishima Ao",
+
+  "scenario": "Kịch bản",
+  "kai": "Kai",
+  "niijima yuu": "Niijima Yuu",
+  "hasama": "Hasama",
+  "sayuki shun": "Sayuki Shun",
+
+  "music producer": "Âm nhạc",
+  "orito shinji": "Orito Shinji",
+  "director": "Đạo diễn",
+
+  "producer": "Nhà sản xuất",
+  "okano touya": "Okano Touya",
+
+  "genre": "Thể loại",
+  "romance adventure game": "Nakige"
 }
