feat: add multi languages in story section

--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -25,5 +25,20 @@
   "okano touya": "Okano Touya",
 
   "genre": "Thể loại",
-  "romance adventure game": "Nakige"
+  "romance adventure game": "Nakige",
+
+  "story1": "10 năm trước, chiếc hộp ấy đã được chôn xuống đất.",
+  "story2": "Giờ đây, thời khắc khám phá những điều chứa đựng trong nó đang đến gần.",
+
+  "story3": "Nhân vật chính Hayakawa Mugi cùng em gái Rikka",
+  "story4": "đến thăm thị trấn Masumi ở phía bắc.",
+
+  "story5": "Một thị trấn nơi thời gian trôi chầm chậm như những cơn gió,",
+  "story6": "khiến người ta quên đi sự hối hả và tấp nập của thành phố.",
+
+  "story7": "Cuộc sống bình dị nơi thị trấn nhỏ",
+  "story8": "gắn liền với việc khai thác lợi ích của cối xay gió từ xa xưa.",
+
+  "story9": "Mugi quyết định rằng cậu sẽ tận hưởng giây phút bình yên này",
+  "story10": "cho đến thời khắc quyết định đó."
 }
