--- a/src/languages/jp.json
+++ b/src/languages/jp.json
@@ -25,5 +25,20 @@
   "okano touya": "丘野塔也",
 
   "genre": "ジャンル",
-  "romance adventure game": "恋愛アドベンチャーゲーム"
+  "romance adventure game": "恋愛アドベンチャーゲーム",
+
+  "story1": "10年前に埋めた",
+  "story2": "タイムカプセルを開ける日が近づいていた。",
+
+  "story3": "主人公の速川 麦は、妹の六花とともに",
+  "story4": "ふたりで北の地、真澄町へ訪れる。",
+
+  "story5": "都会の喧噪を忘れさせてくれる町は、",
+  "story6": "強く吹く風の中でゆっくりとした時間が流れていた。",
+
+  "story7": "大きな風車の恩恵を受けながら、",
+  "story8": "経験と知恵と人のつながりで築かれる生活。",
+
+  "story9": "約束の時間まで、麦は人々と交流を重ねながら",
+  "story10": "町でスローライフを送ることにする。"
 }
