--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -33,11 +33,11 @@
   "story3": "Nhân vật chính Hayakawa Mugi cùng em gái Rikka",
   "story4": "đến thăm thị trấn Masumi ở phía bắc.",
 
-  "story5": "Một thị trấn nơi thời gian trôi chầm chậm như những cơn gió,",
-  "story6": "khiến người ta quên đi sự hối hả và tấp nập của thành phố.",
+  "story5": "Một thị trấn nhỏ nơi thời gian trôi chầm chậm như những cơn gió,",
+  "story6": "khiến người ta quên đi sự hối hả và phồn hoa chốn đô thị.",
 
-  "story7": "Cuộc sống bình dị nơi thị trấn nhỏ",
-  "story8": "gắn liền với việc khai thác lợi ích của cối xay gió từ xa xưa.",
+  "story7": "Cuộc sống làng quê bình dị",
+  "story8": "gắn liền với kinh nghiệm khai thác cối xay gió từ xa xưa.",
 
   "story9": "Mugi quyết định rằng cậu sẽ tận hưởng giây phút bình yên này",
   "story10": "cho đến thời khắc quyết định đó."
