fix: fix bug font bug

--- a/src/languages/jp.json
+++ b/src/languages/jp.json
@@ -40,5 +40,7 @@
   "story8": "経験と知恵と人のつながりで築かれる生活。",
 
   "story9": "約束の時間まで、麦は人々と交流を重ねながら",
-  "story10": "町でスローライフを送ることにする。"
+  "story10": "町でスローライフを送ることにする。",
+
+  "spica alias": "風をまとった少女"
 }
