--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -40,5 +40,7 @@
   "story8": "gắn liền với kinh nghiệm khai thác cối xay gió từ xa xưa.",
 
   "story9": "Mugi quyết định rằng cậu sẽ tận hưởng giây phút bình yên này",
-  "story10": "cho đến thời khắc quyết định đó."
+  "story10": "cho đến thời khắc quyết định đó.",
+
+  "spica alias": "Đứa con của gió"
 }
