refactor: refactor character model to optimize

--- a/src/languages/jp.json
+++ b/src/languages/jp.json
@@ -42,5 +42,13 @@
   "story9": "約束の時間まで、麦は人々と交流を重ねながら",
   "story10": "町でスローライフを送ることにする。",
 
-  "spica alias": "風をまとった少女"
+  "height": "身長",
+  "weight": "体重",
+
+  "spica": {
+    "alias": "風をまとった少女",
+    "name": "辻倉朱比華",
+    "catchphrase": "「私はただ風に吹かれていることにするわ」",
+    "profile": "町外れのトレーラーハウスで生活している謎めいた少女。\n町の人達からは距離を置いて生活している。\n麦畑の世話が仕事で、収穫された麦を使って、\n絶品と言われるピザを焼いている。\nが、なかなか食べさせて貰えない。\n口はだいぶ悪いが、動物やお年寄りには優しい。\n夜、風に吹かれながら草笛を吹く姿がよく目撃されている。"
+  }
 }
