--- a/src/languages/vi.json
+++ b/src/languages/vi.json
@@ -28,7 +28,7 @@
   "romance adventure game": "Nakige",
 
   "story1": "10 năm trước, chiếc hộp ấy đã được chôn xuống đất.",
-  "story2": "Giờ đây, thời khắc khám phá những điều chứa đựng trong nó đang đến gần.",
+  "story2": "Giờ đây, thời khắc khám phá những điều ẩn chứa bên trong nó đang đến gần.",
 
   "story3": "Nhân vật chính Hayakawa Mugi cùng em gái Rikka",
   "story4": "đến thăm thị trấn Masumi ở phía bắc.",
@@ -42,5 +42,13 @@
   "story9": "Mugi quyết định rằng cậu sẽ tận hưởng giây phút bình yên này",
   "story10": "cho đến thời khắc quyết định đó.",
 
-  "spica alias": "Đứa con của gió"
+  "height": "Chiều cao",
+  "weight": "Cân nặng",
+
+  "spica": {
+    "alias": "Đứa con của gió",
+    "name": "Tsujikura Spica",
+    "catchphrase": "Thân xác tôi sẽ bay theo cơn gió.",
+    "profile": "Cô gái bí ẩn sống ẩn dật trong một chiếc cabin ở ngoại ô thị trấn.\nCông việc của cô là chăm sóc cánh đồng lúa mì, dùng nguyên liệu thu hoạch được để làm ra những chiếc bánh pizza tuyệt ngon mà ai cũng phải khen ngợi. Dù vậy, rất ít người có cơ hội được thưởng thức bánh của cô ấy.\nTuy là một người ít nói nhưng cô rất yêu động vật và lễ phép với người lớn.\nHằng đêm, người ta thường thấy cô ấy ngân nga giai điệu bằng chiếc kèn lá trong khi hòa mình vào cơn gió."
+  }
 }
