refactor: fix character model to use i18n for artwork

--- a/src/i18n/jp.json
+++ b/src/i18n/jp.json
@@ -49,6 +49,7 @@
     "alias": "風をまとった少女",
     "name": "辻倉朱比華",
     "catchphrase": "「私はただ風に吹かれていることにするわ」",
+    "artwork": "Na-Ga",
     "profile": "町外れのトレーラーハウスで生活している謎めいた少女。\n町の人達からは距離を置いて生活している。\n麦畑の世話が仕事で、収穫された麦を使って、\n絶品と言われるピザを焼いている。\nが、なかなか食べさせて貰えない。\n口はだいぶ悪いが、動物やお年寄りには優しい。\n夜、風に吹かれながら草笛を吹く姿がよく目撃されている。"
   },
 
@@ -56,6 +57,7 @@
     "alias": "空を目指すフワフワ少女",
     "name": "総羽 愛乃",
     "catchphrase": "「飛んで見れば分かりますよ。この子のすごさが！」",
+    "artwork": "きみしま青",
     "profile": "町外れでまわる風車の修理をしている少女。\n機械関係に強く、自作の飛行機で空へはばたくために、あぶなっかしい実験をしている。\n時々傘をさしながら、空から降ってくる。\n姿も言葉も、全体的にフワフワしている。と、町の人に言われている。\n工房の２階で父親と２人で暮らしているらしい。"
   },
 
@@ -63,6 +65,7 @@
     "alias": "地図を作る少女",
     "name": "淡雪 陽彩",
     "catchphrase": "「キミの選択はとてもいいわね」",
+    "artwork": "ふむゆん",
     "profile": "天文台に住む少女。\n綺麗なものを探すことを生き甲斐としており、それを地図に書き込み続けている。\n異常な程に知識が豊富で、知らないことは存在しないと豪語しており、自称偏差値８那由多の天才。\n当たり前のように自分を美しいと思っているが、エキセントリックすぎる行動と好奇心に忠実すぎる性格の為、彼女の行動に付き合える人間は少ない。\n時折「お隣さんに行ってくるわ」と言って、どこかへと出かけてしまうことがある。\n好きな食べ物は金平糖。"
   },
 
@@ -70,6 +73,7 @@
     "alias": "郵便まっしぐらなひたむき少女",
     "name": "白渡 小詠",
     "catchphrase": "「大切なお手紙の届け先を探してるんです。 ……ずっと、ずっと」",
+    "artwork": "永山ゆうのん",
     "profile": "町唯一の郵便屋を営む少女。\n町の人々には感謝されているものの、本人にはあまりその自覚がない。\nただただ郵便が自分の使命であるかのように、ひたむきに仕事をこなしていく。\n生粋のおじいちゃんっ子で、配達前は必ず亡くなってしまったおじいちゃんのお墓参りに訪れている。\n世間のことに疎く、人の言うことを何でも信じてしまうことがある。\nそんなところも、町のみんなから微笑ましく見守られている愛されキャラ。"
   },
 
@@ -77,6 +81,7 @@
     "alias": "兄をダメにする万能妹",
     "name": "速川 六花",
     "catchphrase": "「兄さん、ご立派です！」",
+    "artwork": "Na-Ga",
     "profile": "主人公の妹で、共に舞台となる町にやってきた少女。\n兄の発言や行動は、どんなことでも全肯定してくれる。\n町に滞在中は保育園で臨時バイトをして、子供たちの面倒を見ながら、兄嫁検定ノートを片手に兄の嫁探しをしている。\n兄以外の男性には塩対応だが、兄にとって有益となると判断した人へはとても丁寧。\n秘伝の「すき焼きのタレ」を持っていて、これさえあれば何でも作れると信じている。"
   }
 }
