--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -49,6 +49,7 @@
     "alias": "Đứa con của gió",
     "name": "Tsujikura Spica",
     "catchphrase": "Thân xác tôi sẽ bay theo cơn gió.",
+    "artwork": "Na-Ga",
     "profile": "Cô gái bí ẩn sống ẩn dật trong một chiếc cabin ở ngoại ô thị trấn.\nCông việc của cô là chăm sóc cánh đồng lúa mì, dùng nguyên liệu thu hoạch được để làm ra những chiếc bánh pizza tuyệt ngon mà ai cũng phải khen ngợi. Dù vậy, rất ít người có cơ hội được thưởng thức bánh của cô ấy.\nTuy ít nói nhưng cô lại rất dịu dàng với vật nuôi và lễ phép với người lớn.\nHằng đêm, người ta thường thấy cô ấy ngân nga giai điệu bằng chiếc kèn lá trong khi hòa mình vào cơn gió."
   },
 
@@ -56,20 +57,23 @@
     "alias": "Phi công trẻ",
     "name": "Fusaba Aino",
     "catchphrase": "Thử đi. Chiếc máy bay này tuyệt lắm đó!",
-    "profile": "Một cô gái làm nghề sửa chữa tua-bin gió ở ngoại ô thị trấn.\nLà một người giỏi về cơ khí, cô thường thực hiện các thí nghiệm nguy hiểm với chiếc máy bay tự chế của mình với ước mơ được bay vút lên bầu trời.\nĐôi khi cô ấy tiếp đất bằng cách sử dụng một chiếc ô.\nCô sống cùng với cha ở tầng 2 tại một công xưởng."
+    "artwork": "Kimishima Ao",
+    "profile": "Một cô gái làm nghề sửa chữa tua-bin gió ở ngoại ô thị trấn.\nLà một người giỏi về cơ khí, cô thường thực hiện các thí nghiệm nguy hiểm với chiếc máy bay tự chế của mình nhằm hiện thực hóa ước mơ được bay vút lên bầu trời.\nĐôi khi cô ấy tiếp đất bằng cách sử dụng một chiếc ô.\nCô sống cùng với cha ở tầng 2 tại một công xưởng."
   },
 
   "hiiro": {
     "alias": "Nhà thiết kế bản đồ",
     "name": "Awayuki Hiiro",
     "catchphrase": "Lựa chọn sáng suốt đấy",
-    "profile": "Một cô gái sống ở đài thiên văn.\nCô luôn khao khát tìm kiếm những điều tốt đẹp, như là ý nghĩa của cuộc sống, và ghi chép chúng xuống một tấm bản đồ.\nMặc dù là một thiên tài và hoa hậu tự xưng, rất ít người giao du với cô ấy vì tính cách lập dị và tò mò quá mức.\nThỉnh thoảng cô ấy thốt lên \"Qua nhà hàng xóm chơi thôi\" rồi lẩn đi đâu mất.\nMón ăn ưa thích của cô là konpeito."
+    "artwork": "Fumuyun",
+    "profile": "Một cô gái sống ở đài thiên văn.\nCô luôn khao khát tìm kiếm những điều tốt đẹp, chẳng hạn như là ý nghĩa của cuộc đời, và ghi chép chúng xuống một tấm bản đồ.\nMặc dù là một thiên tài và hoa hậu tự xưng, rất ít người giao du với cô ấy vì tính cách lập dị và tò mò quá mức.\nThỉnh thoảng cô ấy thốt lên \"qua nhà hàng xóm chơi thôi\" rồi lẩn đi đâu mất.\nMón ăn ưa thích của cô là Konpeitō."
   },
 
   "koyomi": {
     "alias": "Cô đưa thư nhiệt thành",
     "name": "Shirato Koyomi",
     "catchphrase": "Có một bức thư quan trọng mà tôi đã luôn tìm kiếm địa chỉ của nó. ...từ rất rất lâu rồi",
+    "artwork": "Nagayama Yuunon",
     "profile": "Người điều hành bưu điện duy nhất trong thị trấn.\nDù được mọi người quý mến nhưng bản thân cô lại không mấy ý thức được điều đó.\nCô luôn làm việc một cách cực kỳ tận tâm, coi việc đưa thư là sứ mệnh mà mình được giao phó.\nĐược ông nội nuôi dạy từ nhỏ. Sau khi người ông mất, cô luôn đến thăm mộ ông trước khi đi làm.\nDù thiếu kỹ năng xã hội và rất dễ tin vào lời nói của người khác, nhưng sự ngây thơ và tính cách ngọt ngào đã khiến cô trở thành người được quý mến trong thị trấn."
   },
 
@@ -77,6 +81,7 @@
     "alias": "Em gái \"hư\"",
     "name": "Shirato Koyomi",
     "catchphrase": "Nii-san, anh làm tốt lắm!",
+    "artwork": "Na-Ga",
     "profile": "Em gái của nhân vật chính. Cô đến thị trấn cùng với anh trai.\nLà một brocon chính hiệu, cô luôn ủng hộ anh trai dù cho \"hắn ta\" có nói hay làm gì.\nTrong thời gian ở lại thị trấn, cô vừa làm công việc bán thời gian tại một nhà trẻ, vừa cầm trên tay cuốn sổ \"kiểm định cô dâu\" để tìm kiếm người vợ tương lai cho anh.\nCô khá lạnh lùng với các chàng trai khác, nhưng lại rất lịch sự với những ai giúp đỡ anh trai mình.\nCô còn giữ bí quyết làm nước xốt \"sukiyaki\" - thứ mà cô tin rằng có thể dùng để chế biến ra bất kỳ món ăn nào."
   }
 }
