fix: fix a wrong word

--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -79,7 +79,7 @@
 
   "rikka": {
     "alias": "Em gái \"hư\"",
-    "name": "Shirato Koyomi",
+    "name": "Hayakawa Rikka",
     "catchphrase": "Nii-san, anh làm tốt lắm!",
     "artwork": "Na-Ga",
     "profile": "Em gái của nhân vật chính. Cô đến thị trấn cùng với anh trai.\nLà một brocon chính hiệu, cô luôn ủng hộ anh trai dù cho \"hắn ta\" có nói hay làm gì.\nTrong thời gian ở lại thị trấn, cô vừa làm công việc bán thời gian tại một nhà trẻ, vừa cầm trên tay cuốn sổ \"kiểm định cô dâu\" để tìm kiếm người vợ tương lai cho anh.\nCô khá lạnh lùng với các chàng trai khác, nhưng lại rất lịch sự với những ai giúp đỡ anh trai mình.\nCô còn giữ bí quyết làm nước xốt \"sukiyaki\" - thứ mà cô tin rằng có thể dùng để chế biến ra bất kỳ món ăn nào."
