--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -50,7 +50,7 @@
     "name": "Tsujikura Spica",
     "catchphrase": "Thân xác tôi sẽ bay theo cơn gió.",
     "artwork": "Na-Ga",
-    "profile": "Cô gái bí ẩn sống ẩn dật trong một chiếc cabin ở ngoại ô thị trấn.\nCông việc của cô là chăm sóc cánh đồng lúa mì, dùng nguyên liệu thu hoạch được để làm ra những chiếc bánh pizza tuyệt ngon mà ai cũng phải khen ngợi. Dù vậy, rất ít người có cơ hội được thưởng thức bánh của cô ấy.\nTuy ít nói nhưng cô lại rất dịu dàng với vật nuôi và lễ phép với người lớn.\nHằng đêm, người ta thường thấy cô ấy ngân nga giai điệu bằng chiếc kèn lá trong khi hòa mình vào cơn gió."
+    "profile": "Cô gái bí ẩn sống ẩn dật trong một chiếc cabin ở ngoại ô thị trấn.\nCông việc của cô là chăm sóc cánh đồng lúa mì, dùng nguyên liệu thu hoạch được để làm ra những chiếc bánh pizza tuyệt ngon mà ai cũng phải khen ngợi. Dù vậy, rất ít người có cơ hội được thưởng thức bánh của cô ấy.\nTuy ít nói nhưng cô lại rất dịu dàng với vật nuôi và lễ phép với người lớn.\nHằng đêm, người ta thường thấy cô ấy ngân nga giai điệu nhẹ nhàng bằng chiếc kèn lá trong khi hòa mình vào cơn gió."
   },
 
   "aino": {
@@ -58,7 +58,7 @@
     "name": "Fusaba Aino",
     "catchphrase": "Thử đi. Chiếc máy bay này tuyệt lắm đó!",
     "artwork": "Kimishima Ao",
-    "profile": "Một cô gái làm nghề sửa chữa tua-bin gió ở ngoại ô thị trấn.\nLà một người giỏi về cơ khí, cô thường thực hiện các thí nghiệm nguy hiểm với chiếc máy bay tự chế của mình nhằm hiện thực hóa ước mơ được bay vút lên bầu trời.\nĐôi khi cô ấy tiếp đất bằng cách sử dụng một chiếc ô.\nCô sống cùng với cha ở tầng 2 tại một công xưởng."
+    "profile": "Một cô gái làm nghề sửa chữa tua-bin gió ở ngoại ô thị trấn.\nLà một người giỏi về cơ khí, cô thường thực hiện các thí nghiệm nguy hiểm với chiếc máy bay tự chế của mình nhằm hiện thực hóa ước mơ được bay vút lên bầu trời.\nĐôi khi cô ấy hạ cánh khẩn cấp bằng cách sử dụng một chiếc ô.\nCô sống cùng với cha ở tầng 2 tại một công xưởng."
   },
 
   "hiiro": {
@@ -82,6 +82,6 @@
     "name": "Hayakawa Rikka",
     "catchphrase": "Nii-san, anh làm tốt lắm!",
     "artwork": "Na-Ga",
-    "profile": "Em gái của nhân vật chính. Cô đến thị trấn cùng với anh trai.\nLà một brocon chính hiệu, cô luôn ủng hộ anh trai dù cho \"hắn ta\" có nói hay làm gì.\nTrong thời gian ở lại thị trấn, cô vừa làm công việc bán thời gian tại một nhà trẻ, vừa cầm trên tay cuốn sổ \"kiểm định cô dâu\" để tìm kiếm người vợ tương lai cho anh.\nCô khá lạnh lùng với các chàng trai khác, nhưng lại rất lịch sự với những ai giúp đỡ anh trai mình.\nCô còn giữ bí quyết làm nước xốt \"sukiyaki\" - thứ mà cô tin rằng có thể dùng để chế biến ra bất kỳ món ăn nào."
+    "profile": "Em gái của nhân vật chính. Cô đến thị trấn cùng với anh trai.\nLà một brocon chính hiệu, cô luôn đứng về phía anh trai dù cho \"hắn ta\" có nói hay làm gì.\nTrong thời gian ở lại thị trấn, cô vừa làm công việc bán thời gian tại một nhà trẻ, vừa cầm trên tay cuốn sổ \"kiểm định cô dâu\" để tìm kiếm người vợ tương lai cho anh.\nCô khá lạnh lùng với các chàng trai khác, nhưng lại rất lịch sự với những ai giúp đỡ anh trai mình.\nCô còn giữ bí quyết làm nước xốt \"sukiyaki\" - thứ mà cô tin rằng có thể dùng để chế biến ra bất kỳ món ăn nào."
   }
 }
