--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -60,7 +60,7 @@
     "name": "Fusaba Aino",
     "catchphrase": "Thử đi. Chiếc máy bay này tuyệt lắm đó!",
     "artwork": "Kimishima Ao",
-    "profile": "Một cô gái làm nghề sửa chữa tua-bin gió ở ngoại ô thị trấn.\nLà một người giỏi về cơ khí, cô thường thực hiện các thí nghiệm nguy hiểm với chiếc máy bay tự chế của mình nhằm hiện thực hóa ước mơ được bay vút lên bầu trời.\nĐôi khi cô ấy hạ cánh khẩn cấp bằng cách sử dụng một chiếc ô.\nNgoại hình nhỏ nhắn và giọng nói dịu dàng là những gì mà người khác nhận xét về cô.\nCô sống cùng với cha ở tầng 2 tại một công xưởng."
+    "profile": "Một cô gái làm nghề sửa chữa tua-bin gió ở ngoại ô thị trấn.\nLà một người giỏi về cơ khí, cô thường thực hiện các thí nghiệm nguy hiểm với chiếc máy bay tự chế của mình nhằm hiện thực hóa ước mơ được bay vút lên bầu trời.\nĐôi khi cô ấy hạ cánh khẩn cấp bằng cách sử dụng một chiếc ô.\nNgoại hình nhỏ nhắn và giọng nói dịu dàng là những gì mà người khác nhận xét về cô.\nCô sống cùng cha ở tầng 2 tại một công xưởng."
   },
 
   "hiiro": {
