feat: add horizontal catchphrase box

--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -58,7 +58,7 @@
   "aino": {
     "alias": "Phi công trẻ",
     "name": "Fusaba Aino",
-    "catchphrase": "Thử đi. Chiếc máy bay này tuyệt lắm đó!",
+    "catchphrase": "Thử đi. Cỗ máy biết bay này tuyệt lắm đó!",
     "artwork": "Kimishima Ao",
     "profile": "Một cô gái làm nghề sửa chữa tua-bin gió ở ngoại ô thị trấn.\nLà một người giỏi về cơ khí, cô thường thực hiện các thí nghiệm nguy hiểm với chiếc máy bay tự chế của mình nhằm hiện thực hóa ước mơ được bay vút lên bầu trời.\nĐôi khi cô ấy hạ cánh khẩn cấp bằng cách sử dụng một chiếc ô.\nNgoại hình nhỏ nhắn và giọng nói dịu dàng là những gì mà người khác nhận xét về cô.\nCô sống cùng cha ở tầng 2 tại một công xưởng."
   },
@@ -66,7 +66,7 @@
   "hiiro": {
     "alias": "Nhà thiết kế bản đồ",
     "name": "Awayuki Hiiro",
-    "catchphrase": "Lựa chọn sáng suốt đấy",
+    "catchphrase": "Lựa chọn sáng suốt đấy.",
     "artwork": "Fumuyun",
     "profile": "Một cô gái sống ở đài thiên văn.\nCô luôn khao khát tìm kiếm những điều tốt đẹp, chẳng hạn như là ý nghĩa của cuộc đời, và ghi chép xuống một tấm bản đồ.\nMặc dù là một thiên tài và hoa hậu tự xưng, rất ít người giao du với cô vì tính cách lập dị và tò mò quá mức.\nThỉnh thoảng cô ấy thốt lên \"qua nhà hàng xóm chơi thôi\" rồi lẩn đi đâu mất.\nMón ăn ưa thích của cô là Konpeitō."
   },
@@ -74,7 +74,7 @@
   "koyomi": {
     "alias": "Cô đưa thư nhiệt thành",
     "name": "Shirato Koyomi",
-    "catchphrase": "Có một bức thư quan trọng mà tôi đã luôn tìm kiếm địa chỉ của nó. ...từ rất rất lâu rồi",
+    "catchphrase": "Có một bức rất thư quan trọng mà tôi đã luôn tìm kiếm địa chỉ của nó...từ rất rất lâu rồi.",
     "artwork": "Nagayama Yuunon",
     "profile": "Người điều hành bưu điện duy nhất trong thị trấn.\nDù được mọi người quý mến nhưng bản thân cô lại không mấy ý thức được điều đó.\nCô luôn làm việc một cách cực kỳ tận tâm, coi việc đưa thư là sứ mệnh mà mình được giao phó.\nĐược ông nội nuôi dạy từ nhỏ. Sau khi người ông mất, cô luôn đến thăm mộ ông trước khi đi làm.\nDù thiếu kỹ năng xã hội và rất dễ tin vào lời nói của người khác, nhưng sự ngây thơ và tính cách ngọt ngào đã khiến cô trở thành người được quý mến trong thị trấn."
   },
