fix: fix a misplace word

--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -74,7 +74,7 @@
   "koyomi": {
     "alias": "Cô đưa thư nhiệt thành",
     "name": "Shirato Koyomi",
-    "catchphrase": "Có một bức rất thư quan trọng mà tôi đã luôn tìm kiếm địa chỉ của nó...từ rất rất lâu rồi.",
+    "catchphrase": "Có một bức thư rất quan trọng mà tôi đã luôn tìm kiếm địa chỉ của nó...từ rất rất lâu rồi.",
     "artwork": "Nagayama Yuunon",
     "profile": "Người điều hành bưu điện duy nhất trong thị trấn.\nDù được mọi người quý mến nhưng bản thân cô lại không mấy ý thức được điều đó.\nCô luôn làm việc một cách cực kỳ tận tâm, coi việc đưa thư là sứ mệnh mà mình được giao phó.\nĐược ông nội nuôi dạy từ nhỏ. Sau khi người ông mất, cô luôn đến thăm mộ ông trước khi đi làm.\nDù thiếu kỹ năng xã hội và rất dễ tin vào lời nói của người khác, nhưng sự ngây thơ và tính cách ngọt ngào đã khiến cô trở thành người được quý mến trong thị trấn."
   },
