feat: Update i18n translations for intro and story components
- Update Vietnamese translation for intro lines
- Update Vietnamese translation for story lines
- Update Japanese translation for intro lines
- Update Japanese translation for story lines

--- a/src/i18n/jp.json
+++ b/src/i18n/jp.json
@@ -1,10 +1,12 @@
 {
   "title": "約束は、風のなかに ――",
 
-  "intro1": "黄金色の海がそよいだ",
-  "intro2": "ゆるりと過ぎゆく時間に包まれながら",
-  "intro3": "懐かしいささめきに包まれながら",
-  "intro4": "約束は、風のなかに ――",
+  "intro": {
+    "line1": "黄金色の海がそよいだ",
+    "line2": "ゆるりと過ぎゆく時間に包まれながら",
+    "line3": "懐かしいささめきに包まれながら",
+    "line4": "約束は、風のなかに ――"
+  },
 
   "original artwork": "原画",
   "fumuyun": "ふむゆん",
@@ -27,20 +29,22 @@
   "genre": "ジャンル",
   "romance adventure game": "恋愛アドベンチャーゲーム",
 
-  "story1": "10年前に埋めた",
-  "story2": "タイムカプセルを開ける日が近づいていた。",
+  "story": {
+    "line1": "10年前に埋めた",
+    "line2": "タイムカプセルを開ける日が近づいていた。",
 
-  "story3": "主人公の速川 麦は、妹の六花とともに",
-  "story4": "ふたりで北の地、真澄町へ訪れる。",
+    "line3": "主人公の速川 麦は、妹の六花とともに",
+    "line4": "ふたりで北の地、真澄町へ訪れる。",
 
-  "story5": "都会の喧噪を忘れさせてくれる町は、",
-  "story6": "強く吹く風の中でゆっくりとした時間が流れていた。",
+    "line5": "都会の喧噪を忘れさせてくれる町は、",
+    "line6": "強く吹く風の中でゆっくりとした時間が流れていた。",
 
-  "story7": "大きな風車の恩恵を受けながら、",
-  "story8": "経験と知恵と人のつながりで築かれる生活。",
+    "line7": "大きな風車の恩恵を受けながら、",
+    "line8": "経験と知恵と人のつながりで築かれる生活。",
 
-  "story9": "約束の時間まで、麦は人々と交流を重ねながら",
-  "story10": "町でスローライフを送ることにする。",
+    "line9": "約束の時間まで、麦は人々と交流を重ねながら",
+    "line10": "町でスローライフを送ることにする。"
+  },
 
   "height": "身長",
   "weight": "体重",
