refactor: fix some bugs on mobile mode, change vietnamese font

--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -8,7 +8,7 @@
     "line4": "Lời hẹn ước ấy đã tan theo gió..."
   },
 
-  "original artwork": "Minh họa gốc",
+  "original artwork": "Minh họa",
   "fumuyun": "Fumuyun",
   "nagayama yuunon": "Nagayama Yuunon",
   "kimishima ao": "Kimishima Ao",
@@ -62,7 +62,7 @@
   "aino": {
     "alias": "Phi công trẻ",
     "name": "Fusaba Aino",
-    "catchphrase": "Thử đi. Cỗ máy biết bay này tuyệt lắm đó!",
+    "catchphrase": "Thử đi. Cỗ máy này có thể bay được đó!",
     "artwork": "Kimishima Ao",
     "profile": "Một cô gái làm nghề sửa chữa tua-bin gió ở ngoại ô thị trấn.\nLà một người giỏi về cơ khí, cô thường thực hiện các thí nghiệm nguy hiểm với chiếc máy bay tự chế của mình nhằm hiện thực hóa ước mơ được bay vút lên bầu trời.\nĐôi khi cô ấy hạ cánh khẩn cấp bằng cách sử dụng một chiếc ô.\nNgoại hình nhỏ nhắn và giọng nói dịu dàng là những gì mà người khác nhận xét về cô.\nCô sống cùng cha ở tầng 2 tại một công xưởng."
   },
@@ -80,7 +80,7 @@
     "name": "Shirato Koyomi",
     "catchphrase": "Có một bức thư rất quan trọng mà tôi đã luôn tìm kiếm địa chỉ của nó...từ rất rất lâu rồi.",
     "artwork": "Nagayama Yuunon",
-    "profile": "Người điều hành bưu điện duy nhất trong thị trấn.\nDù được mọi người quý mến nhưng bản thân cô lại không mấy ý thức được điều đó.\nCô luôn làm việc một cách cực kỳ tận tâm, coi việc đưa thư là sứ mệnh mà mình được giao phó.\nĐược ông nội nuôi dạy từ nhỏ. Sau khi người ông mất, cô luôn đến thăm mộ ông trước khi đi làm.\nDù thiếu kỹ năng xã hội và rất dễ tin vào lời nói của người khác, nhưng sự ngây thơ và tính cách ngọt ngào đã khiến cô trở thành người được quý mến trong thị trấn."
+    "profile": "Người điều hành bưu điện duy nhất trong thị trấn.\nTuy được mọi người quý mến nhưng bản thân cô lại không mấy ý thức được điều đó.\nCô luôn làm việc một cách cực kỳ tận tâm, coi việc đưa thư là sứ mệnh mà mình được giao phó.\nĐược ông nội nuôi dạy từ nhỏ. Sau khi người ông mất, cô luôn đến thăm mộ ông trước khi đi làm.\nDù thiếu kỹ năng xã hội và rất dễ tin vào lời nói của người khác, nhưng sự ngây thơ và tính cách ngọt ngào đã khiến cô trở thành người được quý mến trong thị trấn."
   },
 
   "rikka": {
@@ -88,6 +88,6 @@
     "name": "Hayakawa Rikka",
     "catchphrase": "Nii-san, anh làm tốt lắm!",
     "artwork": "Na-Ga",
-    "profile": "Em gái của nhân vật chính. Cô đến thị trấn cùng với anh trai.\nLà một brocon chính hiệu, cô luôn đứng về phía anh trai dù cho \"hắn ta\" có nói hay làm gì.\nTrong thời gian ở lại thị trấn, cô vừa làm công việc bán thời gian tại một nhà trẻ, vừa cầm trên tay cuốn sổ \"kiểm định cô dâu\" để tìm kiếm người vợ tương lai cho anh.\nCô khá lạnh lùng với các chàng trai khác, nhưng lại rất lịch sự với những ai giúp đỡ anh trai mình.\nCô còn giữ bí quyết làm nước xốt \"sukiyaki\" - thứ mà cô tin rằng có thể dùng để chế biến ra bất kỳ món ăn nào."
+    "profile": "Em gái của nhân vật chính. Cô đến thị trấn cùng anh trai.\nLà một brocon chính hiệu, cô luôn đứng về phía anh trai dù cho \"hắn ta\" có nói hay làm gì.\nTrong thời gian ở lại thị trấn, cô vừa làm công việc bán thời gian tại một nhà trẻ, vừa cầm trên tay cuốn sổ \"kiểm định cô dâu\" để tìm kiếm người vợ tương lai cho anh.\nCô khá lạnh lùng với các chàng trai khác, nhưng lại rất lịch sự với những ai giúp đỡ anh trai mình.\nCô còn giữ bí quyết làm nước xốt \"sukiyaki\" - thứ mà cô tin rằng có thể dùng để chế biến ra bất kỳ món ăn nào."
   }
 }
