chore: add a missing line break

--- a/src/i18n/jp.json
+++ b/src/i18n/jp.json
@@ -78,7 +78,7 @@
   "koyomi": {
     "alias": "郵便まっしぐらなひたむき少女",
     "name": "白渡 小詠",
-    "quote": "「大切なお手紙の届け先を探してるんです。 ……ずっと、ずっと」",
+    "quote": "「大切なお手紙の届け先を探してるんです。\n……ずっと、ずっと」",
     "artwork": "永山ゆうのん",
     "profile": "町唯一の郵便屋を営む少女。\n町の人々には感謝されているものの、本人にはあまりその自覚がない。\nただただ郵便が自分の使命であるかのように、ひたむきに仕事をこなしていく。\n生粋のおじいちゃんっ子で、配達前は必ず亡くなってしまったおじいちゃんのお墓参りに訪れている。\n世間のことに疎く、人の言うことを何でも信じてしまうことがある。\nそんなところも、町のみんなから微笑ましく見守られている愛されキャラ。"
   },
