--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -64,7 +64,7 @@
     "name": "Fusaba Aino",
     "quote": "Thử đi. Cỗ máy này có thể bay được đấy!",
     "artwork": "Kimishima Ao",
-    "profile": "Một cô gái làm nghề sửa chữa tua-bin gió ở ngoại ô thị trấn.\nLà một người giỏi về cơ khí, cô thường thực hiện các thí nghiệm nguy hiểm với chiếc máy bay tự chế của mình nhằm hiện thực hóa ước mơ được bay vút lên bầu trời.\nĐôi khi cô ấy hạ cánh khẩn cấp bằng cách sử dụng một chiếc ô.\nNgoại hình nhỏ nhắn và giọng nói dịu dàng là những gì mà người khác nhận xét về cô.\nCô sống cùng cha ở tầng 2 tại một công xưởng."
+    "profile": "Một cô gái làm nghề sửa chữa tua-bin gió ở ngoại ô thị trấn.\nLà một người có hiểu biết sâu rộng về lĩnh vực cơ khí, cô thường thực hiện các thí nghiệm nguy hiểm với chiếc máy bay tự chế của mình nhằm hiện thực hóa ước mơ được bay vút lên bầu trời.\nTrong trường hợp khẩn cấp, cô nắm chặt lấy chiếc ô và \"hạ cánh an toàn\" mà không một chút sợ hãi hay do dự nào.\nNgoại hình nhỏ nhắn và giọng nói dịu dàng là những gì mà người khác nhận xét về cô.\nCô sống cùng cha ở tầng 2 tại một công xưởng."
   },
 
   "hiiro": {
