refactor: Update character component height for improved layout and modify Vietnamese translation alias

--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -68,7 +68,7 @@
   },
 
   "hiiro": {
-    "alias": "Địa đồ sư",
+    "alias": "Địa đồ thiếu nữ",
     "name": "Awayuki Hiiro",
     "quote": "Lựa chọn sáng suốt đấy.",
     "artwork": "Fumuyun",
