chore: fix some words

--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -5,7 +5,7 @@
     "line1": "Biển vàng nhấp nhô",
     "line2": "Thời gian lặng lẽ trôi qua",
     "line3": "Những lời thì thầm thân thương",
-    "line4": "Lời hẹn ước ấy đã tan theo gió..."
+    "line4": "Lời hẹn ước ấy đã cuốn theo cơn gió..."
   },
 
   "original artwork": "Minh họa",
