chore: fix some words

--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -72,7 +72,7 @@
     "name": "Awayuki Hiiro",
     "quote": "Lựa chọn sáng suốt đấy.",
     "artwork": "Fumuyun",
-    "profile": "Một cô gái sống ở đài thiên văn.\nCô luôn khao khát tìm kiếm những điều tốt đẹp, luôn tự đặt ra những câu hỏi lớn lao, khó để mà có câu trả lời chính xác, chẳng hạn như \"ý nghĩa của cuộc đời này là gì?\", và ghi chép xuống một tấm bản đồ.\nMặc dù là một thiên tài và hoa hậu tự xưng, rất ít người giao du với cô vì tính cách lập dị và tò mò quá mức.\nThỉnh thoảng cô ấy thốt lên \"qua nhà hàng xóm chơi thôi\" rồi lẩn đi đâu mất.\nMón ăn ưa thích của cô là Konpeitō."
+    "profile": "Một cô gái sống ở đài thiên văn.\nCô luôn khao khát tìm kiếm những điều tốt đẹp, luôn tự đặt ra những câu hỏi lớn lao, khó để mà có câu trả lời chính xác, chẳng hạn như \"ý nghĩa của cuộc đời này là gì?\", rồi ghi chép xuống một tấm bản đồ.\nMặc dù là một thiên tài và hoa hậu tự xưng, rất ít người giao du với cô vì tính cách lập dị và tò mò quá mức.\nThỉnh thoảng cô ấy thốt lên \"qua nhà hàng xóm chơi thôi\" rồi lẩn đi đâu mất.\nMón ăn ưa thích của cô là Konpeitō."
   },
 
   "koyomi": {
