refactor: Improve variable naming and enhance text rendering in components - Update Vietnamese translations for clarity and consistency

--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -42,8 +42,8 @@
     "line7": "Cuộc sống làng quê bình dị",
     "line8": "gắn liền với kinh nghiệm khai thác cối xay gió từ xa xưa.",
 
-    "line9": "Mugi quyết định rằng cậu sẽ tận hưởng giây phút bình yên này",
-    "line10": "cho đến thời khắc quyết định đó."
+    "line9": "Mugi quyết định rằng cậu sẽ tận hưởng giây phút yên bình này",
+    "line10": "cho đến thời khắc cuối cùng đó."
   },
 
   "height": "Chiều cao",
@@ -64,7 +64,7 @@
     "name": "Fusaba Aino",
     "quote": "Thử đi. Cỗ máy này có thể bay được đấy!",
     "artwork": "Kimishima Ao",
-    "profile": "Một cô gái làm nghề sửa chữa tua-bin gió ở ngoại ô thị trấn.\nLà người có hiểu biết sâu rộng về lĩnh vực cơ khí, cô thường thực hiện các thí nghiệm nguy hiểm với chiếc máy bay tự chế của mình nhằm hiện thực hóa ước mơ được bay vút lên bầu trời.\nTrong trường hợp khẩn cấp, cô nắm chặt lấy chiếc ô và \"hạ cánh an toàn\" mà không một chút sợ hãi hay do dự nào.\nNgoại hình nhỏ nhắn và giọng nói dịu dàng là những gì mà người khác nhận xét về cô.\nCô sống cùng cha ở tầng 2 tại một công xưởng."
+    "profile": "Một cô gái làm nghề sửa chữa tua-bin gió sống ở ngoại ô thị trấn.\nLà người có hiểu biết sâu rộng về lĩnh vực cơ khí, cô thường thực hiện các thí nghiệm nguy hiểm với chiếc máy bay tự chế của mình nhằm hiện thực hóa ước mơ được bay vút lên bầu trời.\nTrong trường hợp khẩn cấp, cô nắm chặt lấy chiếc ô và \"hạ cánh an toàn\" mà không một chút sợ hãi hay do dự nào.\nNgoại hình nhỏ nhắn và giọng nói dịu dàng là những gì mà người khác nhận xét về cô.\nCô sống cùng cha ở tầng 2 tại một công xưởng."
   },
 
   "hiiro": {
