refactor: remove scroll event listener from LanguageMenu component

--- a/src/i18n/vi.json
+++ b/src/i18n/vi.json
@@ -56,7 +56,7 @@
     "name": "Tsujikura Spica",
     "quote": "Thân xác tôi sẽ bay theo cơn gió.",
     "artwork": "Na-Ga",
-    "profile": "Cô gái bí ẩn sống ẩn dật trong một chiếc cabin ở ngoại ô thị trấn.\nCông việc của cô là chăm sóc cánh đồng lúa mì, dùng nguyên liệu thu hoạch được để làm ra những chiếc bánh pizza tuyệt ngon mà ai cũng phải khen ngợi. Dù vậy, rất ít người có cơ hội được thưởng thức bánh của cô ấy.\nTuy ít nói nhưng cô lại rất dịu dàng với vật nuôi và lễ phép với người lớn.\nHằng đêm, người ta thường thấy cô nhẹ nhàng ngân nga chiếc kèn lá trong khi hòa mình vào cơn gió."
+    "profile": "Cô gái bí ẩn sống ẩn dật trong một chiếc cabin ở ngoại ô thị trấn.\nCông việc của cô là chăm sóc cánh đồng lúa mì, dùng nguyên liệu thu hoạch được để làm ra những chiếc bánh pizza tuyệt ngon mà ai cũng phải khen ngợi. Dù vậy, rất ít người có cơ hội được thưởng thức bánh của cô ấy.\nTuy lạnh lùng, ít nói nhưng cô lại rất dịu dàng với vật nuôi và lễ phép với người lớn.\nHằng đêm, người ta thường thấy cô nhẹ nhàng ngân nga chiếc kèn lá trong khi hòa mình vào cơn gió."
   },
 
   "aino": {
